<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">X-Lab Time Tracker</string>
    <string name="title_clockin_preference">Auto Clock In</string>
    <string name="title_clockout_preference">Auto Clock Out</string>
    <string name="wifi_ssid_preference">Clocking WiFi Network</string>
    <string name="clockOutTitle">Clock Out Time:</string>
    <string name="clockOutButton">Clock Out</string>
    <string name="clockInTitle">Clock In Time:</string>
    <string name="clockInButton">Clock In</string>
    <string name="switchProject">Switch Project</string>
    <string name="projectLabel">Project:</string>
    <string name="timeInLabel">Time In:</string>
    <string name="timeOutLabel">Time Out:</string>
    <string name="updateButton">Update</string>
    <string name="noClockIn">Can\'t clock in in the future!</string>
    <string name="noClockOut">Can\'t clock out in the future!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="username_hint">Domain username</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="pushDay">Push Day</string>

</resources>
