<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/project_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentHolderActivity"
    tools:ignore="MergeRootFrame">

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:calendarViewShown="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateButton"
        android:id="@+id/updateDay"
        android:layout_below="@+id/datePicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateDay"
        android:layout_alignParentLeft="true"
        android:id="@+id/clockInRow"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/timeInLabel"
            android:id="@+id/clockInLabel"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/clockInText"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clockInRow"
        android:layout_alignParentLeft="true"
        android:id="@+id/clockOutRow"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/timeOutLabel"
            android:id="@+id/clockOutLabel"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/clockOutText"
            android:layout_weight="3" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_below="@id/clockOutRow"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/projectHolder"
        android:orientation="vertical" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pushDay"
        android:id="@+id/pushDay"
        android:layout_below="@+id/projectHolder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

</RelativeLayout>
